@@ -23,6 +23,7 @@ export(latlong2km)
 export(make.soapgrid)
 export(rqgam.check)
 export(trim.var)
+export(vis_concurvity)
 import(ggplot2)
 import(mgcv)
 import(mrds)
