@@ -4,6 +4,7 @@ dsm news!
  * when mexdolphins is loaded using data(), the data no longer need to be attach()ed
  * dsm.var.prop throws an error when count or N are not used as the response.
  * dsm.var.prop now calls dsm_varprop, which keeps the scale parameter constant when refitting models for variance propagation. dsm_varprop provides a lower-level interface to variance propagation and is probably faster and more flexible.
+ * add vis_concurvity to visually assess concurvity (colinearity extended to smooth terms) in the model
 
 # 2.2.14
  * nasty bug in predict.dsm fixed: was logging the offset twice when newdata was not provided, leading to very odd checking plots. This also effected the results of predict() when newdata= was not specified. Thanks to Megan Ferguson for alerting us to this.
